--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "mysql": "^2.18.1",
     "nodemon": "^1.19.3"
   }
 }
